# sig-light

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: cicd.yml  publish.yml
scripts/: benchmark.py
src/sig_light/: __init__.py  algebra.py  backprop.py  logsignature.py  lyndon.py  rotational.py  signature.py  transforms.py
tests/: conftest.py  test_algebra.py  test_api_compat.py  test_backprop.py  test_logsignature.py  test_rotational.py  test_signature.py  test_transforms.py
