[project]
name = "sig-light"
version = "0.2.0"
description = "Pure-Python path signature and log signature computation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sig_light"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
include = ["src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "RUF", "SIM"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
